# XtionAISDK

./: .travis.yml  LICENSE  README.md  XtionAISDK.podspec
Example/: Podfile
Example/Tests/: Tests.m
Example/XtionAISDK.xcodeproj/: project.pbxproj
Example/XtionAISDK.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Example/XtionAISDK.xcodeproj/xcshareddata/xcschemes/: XtionAISDK-Example.xcscheme
Example/XtionAISDK.xcworkspace/: contents.xcworkspacedata
XtionAISDK/Classes/: XtionAISDK.h
XtionAISDK/XtionAISDK.framework/: CMakeLists.txt  Info.plist
XtionAISDK/XtionAISDK.framework/Headers/: XtionAISDK.h  XtionAIShareManager.h
XtionAISDK/XtionAISDK.framework/Modules/: module.modulemap
XtionAISDK/XtionAISDK.framework/XtionAIResources.bundle/: register_agreement.html
XtionAISDK/XtionAISDK.framework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
